--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"@babel/polyfill": "^7.0.0-rc.1",
+		"@babel/polyfill": "^7.2.5",
 		"express": "^4.16.4",
 		"serve-static": "^1.13.2",
-		"vue": "^2.5.17",
-		"vuetify": "^1.3.0"
+		"vue": "^2.5.21",
+		"vuetify": "^1.4.0"
 	},
 	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.0.5",
-		"@vue/cli-plugin-eslint": "^3.0.5",
-		"@vue/cli-service": "^3.0.5",
+		"@vue/cli-plugin-babel": "^3.2.2",
+		"@vue/cli-plugin-eslint": "^3.2.2",
+		"@vue/cli-service": "^3.2.3",
 		"stylus": "^0.54.5",
 		"stylus-loader": "^3.0.1",
 		"vue-cli-plugin-vuetify": "^0.3.0",
-		"vue-template-compiler": "^2.5.17",
-		"vuetify-loader": "^1.0.5"
+		"vue-template-compiler": "^2.5.21",
+		"vuetify-loader": "^1.1.0"
 	},
 	"eslintConfig": {
 		"root": true,
